--- a/chrome/components/one_urlbar-searchbar.css
+++ b/chrome/components/one_urlbar-searchbar.css
@@ -374,7 +374,8 @@ findbar{
 .popup-notification-icon[popupid="web-notifications"], .desktop-notification-icon {
     width: 16px !important;
     height: 16px !important;
-    padding: 1px !important;
+    padding: 0px !important;
+    margin-inline-start: 0px !important;
 }
 
 #notification-popup-box {
